fixed letter spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -82,7 +82,6 @@ p.nft-card-description {
 
 span.nft-card-duration {
     display: flex;
-    letter-spacing: 1px;
     font-size: 16px;
     color: hsl(215, 51%, 70%);
     margin-left: 9px;
@@ -90,7 +89,6 @@ span.nft-card-duration {
 
 span.nft-card-price {
     display: flex;
-    letter-spacing: 1px;
     margin-left: 9px;
     font-size: 16px;
     cursor: default;
@@ -105,7 +103,6 @@ aside.nft-card-data {
     margin-top: 27px;
     cursor: default;
     margin-bottom: 18px;
-    padding: 2px;
 }
 
 img.main-img {
@@ -195,7 +192,7 @@ div.nft-footer-profile {
 
 p.nft-creator-name {
     margin-left: 16px;
-    font-size: 13px;
+    font-size: 16px;
     color: hsl(215, 51%, 70%)
 }
 
